examples/test/testpolicy15380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15380
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key20: value18
      key25: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value7
      podSelector:
        matchLabels:
          key29: value48
          key15: value29
